# inertia-fastapi

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
inertia/: __init__.py  helpers.py  http.py  middleware.py  prop_classes.py  settings.py  share.py  test.py  utils.py
inertia/tests/: conftest.py  settings.py  test_rendering.py  test_settings.py
templates/: base.html
