[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inertia-fastapi"
version = "0.1.0"
description = "Inertia.js integration for FastAPI"
readme = "README.md"
authors = [
    { name = "Inertia FastAPI Contributor", email = "example@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.103.2",
  "jinja2>=3.1.6",
  "pydantic>=2.5.3",
  "uvicorn>=0.22.0",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/mohammadhmn/inertia-fastapi"
"Bug Tracker" = "https://github.com/mohammadhmn/inertia-fastapi/issues"

[tool.setuptools]
packages = ["inertia"]


[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = ["E501"] # line too long, formatter will handle this
unfixable = ["B", "SIM"]


[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.11.4",
]
